--- a/docker-compose-v1.yml
+++ b/docker-compose-v1.yml
@@ -29,6 +29,8 @@ services:
       - type: bind
         source: ./key
         target: /run/secrets/encryption_key
+    environment:
+      - RECEIVER_ADDRESS=devopsassignmentpythonanddocker_app-receiver_1
 volumes:
   output: {}
   input: {}
